--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -7,9 +7,11 @@
   align-items: center;
   padding: 0px 40px;
   background-color: #171717;
-  height: 80px;
+  height: 75px;
   border-radius: 10px;
-  border: 1px solid #0a0a0a88;
+  /* border: 1px solid #0a0a0a88; */
+  border: 1px solid #3e3e3e88;
+
 }
 
 .colour_pallate {
