--- a/client/src/styles/hero.css
+++ b/client/src/styles/hero.css
@@ -18,7 +18,7 @@
   background: linear-gradient(90deg, #f96f10, #ef5088);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-size: 4rem;
+  font-size: 3.5rem;
   margin-bottom: 1rem;
   text-align: center;
 }
@@ -47,44 +47,6 @@
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
-.btn-primary::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  transform: translate3d(0, 0, -1px);
-  background: conic-gradient(
-    from 90deg at 40% -25%,
-    #ffd700,
-    #f79d03,
-    #ee6907,
-    #e6390a,
-    #de0d0d,
-    #d61039,
-    #cf1261,
-    #c71585,
-    #cf1261,
-    #d61039,
-    #de0d0d,
-    #ee6907,
-    #f79d03,
-    #ffd700,
-    #ffd700,
-    #ffd700
-  );
-  filter: blur(10px);
-  clip-path: polygon(
-    -100vmax -100vmax,
-    100vmax -100vmax,
-    100vmax 100vmax,
-    -100vmax 100vmax,
-    -100vmax -100vmax,
-    0 0,
-    0 100%,
-    100% 100%,
-    100% 0,
-    0 0
-  );
-}
 
 .btn-primary:hover {
   background-color: #f0f0f0;
@@ -101,8 +63,7 @@
 }
 
 .btn-secondary:hover {
-  background-color: white;
-  color: black;
+  border: 2px solid #f96f10;
 }
 
 /* Responsive Design */
